--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +12,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4"
+  },
+  "engines": {
+    "node": "10.12.0"
   }
+  
 }
